--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.1",
+    "axios": "^1.3.5",
     "classnames": "^2.3.2",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
