--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@types/uuid": "^9.0.1",
     "axios": "^1.3.5",
     "classnames": "^2.3.2",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "sass": "^1.62.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
