--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "use-clipboard-copy": "^0.2.0",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "https://partner.furni.ae",
+  "proxy": "https://lab.furni.ae",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
