--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.46.1",
     "react-input-mask": "^2.0.4",
     "react-number-format": "^5.3.1",
+    "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.3.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
